key-kube/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: keycloak

spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak

    spec:
      containers:
      - name: keycloak
        image: jboss/keycloak:latest
        ports:
        - name: keycloak
          containerPort: 8080
