key-kube/service.yaml
---
apiVersion: v1
kind: Service

metadata:
  namespace: default
  name: keycloak
  labels:
    app.kubernetes.io/instance: keycloak

spec:
  selector:
    app: keycloak
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  type: ClusterIP
