key-kube/route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak
  annotations:
    kubernetes.io/ingress.class: "traefik"

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`keycloak.apps.gamehost.fi`)
      kind: Rule
      services:
        - name: keycloak
          port: 8080
          scheme: http
  tls:
    secretName: tls-gamehost
